--- a/sections/custom-popup-modal.liquid
+++ b/sections/custom-popup-modal.liquid
@@ -1,89 +1,198 @@
 <div>
-    {% for block in section.blocks %}
-        {% case block.type %}
-            {% when 'Button'  %}
-                <modal-opener
-                    class="product-popup-modal__opener no-js-hidden quick-add-hidden"
-                    data-modal="#PopupModal-{{ block.id }}"
-                    {{ block.shopify_attributes }}
-                >
-                    <button
-                        id="ProductPopup-{{ block.id }}"
-                        class="product-popup-modal__button button"
-                        type="button"
-                        aria-haspopup="dialog"
-                    >
-                        {{ block.settings.title  }}
-                    </button>
-                </modal-opener>
-           {%endcase%}
-           
-        <modal-dialog id="PopupModal-{{ block.id }}" class="product-popup-modal" {{ block.shopify_attributes }}>
-        <div
-            role="dialog"
-            aria-label="{{ block.settings.text }}"
-            aria-modal="true"
-            class="product-popup-modal__content"
-            tabindex="-1"
-        >
-            <button
-            id="ModalClose-{{ block.id }}"
-            type="button"
-            class="product-popup-modal__toggle"
-            aria-label="{{ 'accessibility.close' | t }}"
-            >
-            {% render 'icon-close' %}
-            </button>
-            <div class="product-popup-modal__content-info">
-            <h1 class="h2">{{ block.settings.heading  }}</h1>
-            {{ block.settings.content  }}
-            </div>
+  {% for block in section.blocks %}
+  {% case block.type %}
+  {% when 'Button' %}
+  <modal-opener class="product-popup-modal__opener no-js-hidden quick-add-hidden"
+    data-modal="#PopupModal-{{ block.id }}" {{ block.shopify_attributes }}>
+    <button id="ProductPopup-{{ block.id }}" class="product-popup-modal__button button {{ block.settings.className }}"
+      type="button" aria-haspopup="dialog">
+      {{ block.settings.title }}
+    </button>
+  </modal-opener>
+  <modal-dialog id="PopupModal-{{ block.id }}" class="product-popup-modal" {{ block.shopify_attributes }}>
+    <div role="dialog" aria-label="{{ block.settings.text }}" aria-modal="true" class="product-popup-modal__content"
+      tabindex="-1">
+      <button id="ModalClose-{{ block.id }}" type="button" class="product-popup-modal__toggle"
+        aria-label="{{ 'accessibility.close' | t }}">
+        {% render 'icon-close' %}
+      </button>
+      <div class="product-popup-modal__content-info">
+        <h1 class="h2">{{ block.settings.heading }}</h1>
+        {{ block.settings.content }}
+        {%when 'NameInput'%}
+        <div class="field {{ block.settings.className }}">
+          <input class="field__input" autocomplete="name" type="text" id="ContactForm-name"
+            value="{{ block.settings.value }}" placeholder="{{ block.settings.PlaceHolder  }}">
+          <label class="field__label" for="ContactForm-name">{{ block.settings.Label }}</label>
         </div>
-    </modal-dialog> 
-{% endfor %}
+        {%when 'PhoneInput'%}
+        <div class="field {{ block.settings.className }}">
+          <input class="field__input" autocomplete="name" type="text" id="ContactForm-name"
+            value="{{ block.settings.value }}" placeholder="{{ block.settings.PlaceHolder  }}">
+          <label class="field__label" for="ContactForm-name">{{ block.settings.Label }}</label>
+        </div>
+        {%when 'CheckBox'%}
+        <label class="{{ block.settings.className }}">
+          <input type="checkbox">
+          <span class="checkmark"></span>
+          {{ block.settings.label }}
+        </label>
+        {%when 'SubmitButton'%}
+        <div class="{{block.settings.containerClass}}">
+          <button class="button {{ block.settings.className }}"  type="button">
+            {{ block.settings.buttonText }}
+          </button>
+        </div>
+      </div>
+  </modal-dialog>
+  {%endcase%}
+  {% endfor %}
 </div>
 
 {% schema %}
-    {
-      "name": "Custom Popup",
-      "tag": "section",
-      "class": "Popup",
-      "limit": 1,
-      "settings": [
-        {
-          "type": "text",
-          "id": "title",
-          "label": "Popup"
-        }
-      ],
-      "max_blocks": 5,
-      "blocks": [
-         {
-           "name": "Button",
-           "type": "Button",
-           "settings": [
-             {
-               "type": "text",
-               "id": "title",
-               "label": "Open"
-             },
-             {
-              "type": "text",
-              "id":"heading",
-              "label": "Heading"
-             },
-             {
-              "type": "text",
-              "id": "content",
-              "label": "Content"
-             }
-           ]
-         }
-      ],
-      "locales": {
-        "en": {
-          "title": "Popup"
-        } 
+{
+   "name":"Custom Popup",
+   "tag":"section",
+   "class":"Popup",
+   "limit":1,
+   "settings":[
+      {
+         "type":"text",
+         "id":"title",
+         "label":"Popup"
       }
-    }
-    {% endschema %}
+   ],
+   "max_blocks":5,
+   "blocks":[
+      {
+         "name":"Button",
+         "type":"Button",
+         "settings":[
+            {
+               "type":"text",
+               "id":"title",
+               "label":"Open"
+            },
+            {
+               "type":"text",
+               "id":"heading",
+               "label":"Heading"
+            },
+            {
+               "type":"text",
+               "id":"content",
+               "label":"Content"
+            },
+            {
+               "type":"text",
+               "id":"className",
+               "label":"ClassName"
+            }
+         ]
+      },
+      {
+         "name":"NameInput",
+         "type":"NameInput",
+         "limit":1,
+         "settings":[
+            {
+               "type":"text",
+               "id":"PlaceHolder",
+               "label":"PlaceHolder"
+            },
+            {
+               "type":"text",
+               "id":"Value",
+               "label":"Value"
+            },
+            {
+               "type":"text",
+               "id":"Label",
+               "label":"Label"
+            },
+            {
+               "type":"text",
+               "id":"className",
+               "label":"ClassName"
+            }
+         ]
+      },
+      {
+         "name":"PhoneInput",
+         "type":"PhoneInput",
+         "limit":1,
+         "settings":[
+            {
+               "type":"text",
+               "id":"PlaceHolder",
+               "label":"PlaceHolder"
+            },
+            {
+               "type":"text",
+               "id":"Value",
+               "label":"Value"
+            },
+            {
+               "type":"text",
+               "id":"Label",
+               "label":"Label"
+            },
+            {
+               "type":"text",
+               "id":"className",
+               "label":"ClassName"
+            }
+         ]
+      },
+      {
+         "name":"SubmitButton",
+         "type":"SubmitButton",
+         "limit":1,
+         "settings":[
+            {
+               "type":"text",
+               "id":"buttonText",
+               "label":"Value"
+            },
+            {
+               "type":"text",
+               "id":"className",
+               "label":"ClassName"
+            },
+            {
+               "type":"text",
+               "id":"containerClass",
+               "label":"ContainerClass"
+            }
+         ]
+      },
+      {
+         "name":"CheckBox",
+         "type":"CheckBox",
+         "limit":1,
+         "settings":[
+            {
+               "type":"text",
+               "id":"label",
+               "label":"Label"
+            },
+            {
+               "type":"text",
+               "id":"containerClass",
+               "label":"ContainerClass"
+            },
+            {
+               "type":"text",
+               "id":"className",
+               "label":"ClassName"
+            }
+         ]
+      }
+   ],
+   "locales":{
+      "en":{
+         "title":"Popup"
+      }
+   }
+}
+{% endschema %}
